--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -110,13 +110,15 @@ Because WSP Integrated status assessments are time-intensive processes and are n
 
 We recommend peer-review of the CU data and assessments used in steps 1 and 5 if CU assessment are developed outside of an existing published, peer-reviewed process. Also, we recommend peer-review of decisions on SMU-scale aggregation from steps 2, 3 and 4. This peer review can occur, at least in part, through DFO's State of the Salmon Program's annual implementation of the Rapid Multidimenstional Scanner Tool. The Scanner Tool will be applied annually as part of of a process integrating Tool outputs with local expertise to provide provisional statuses for CUs. Expert review is required to vet statuses derived from the implementation of the Scanner Tool to ensure they are consistent with underlying biological definitions (e.g., WSP red zone is associated with elevated risk of extinction) given the multiple and sometimes conflicting dimensions of status. <!--CH: Ann-Marie suggested an example from Fraser Sockeye Shuswap here, but I wonder if it might make the flow of this section awkward? Happy to consider an inclusion from Ann-Marie--> The outputs from that process can be used as a basis for developing CU-level statuses to inform SMU-level LRPs. For CUs or SMUs not included or not fully reviewed in that annual process and where SMU-scale LRPs are required <!--CH addition: under the Fisheries Act?, but mentioned below, so maybe not needed here, CW doesn't hurt the flow of the sentence to include-->, we recommend a separate SMU-scale peer-review process that includes assessment of component CUs and decisions about data deficiencies and CU representatives, covering steps 1-5. When used to support decisions under Canada's Fisheries Act, the steps involved in LRP development should be documented in a CSAS Research Document, CSAS Science Response, and/or CSAS Science Advice Document.<!--CH question: Is this requirement for CSAS documentation okay? We should ask Julie/Jason to what extent this is consistent with out marine species, and then mention the consistency here. Some TWG participants suggested LRP identification could occur in the rebuilding plan, but this seems awkward as rebuilding objectives may be related to LRPs, or at least they will in other species, so best to keep the 2 processes separate I think.
 CW: Agree with keeping rebuilding plan and LRP separate. -->
-                                                                                                                                                                           
+
+<!--SG comment: if status is approximated with the algorithm and the status on the metric is red, this could trigger an integrated status assessment to derive a formal WSP status prior to triggering LRP. -->
+
 The frequency of SMU-scale peer reviews outside of the annual implementation of the Rapid Multidimensional Scanner Tool will depend on variability in CU-level population dynamics over time and how LRPs and SMU-level assessments are used to inform decision making (e.g., if an SMU is batched under the Fisheries Act), among other factors. In the future, management procedures with various frequencies of assessments could be evaluated in a simulation framework to identify risks of delaying assessments relative to costs of implementing them. 
 
 ### Are Aggregate Abundance-Based LRPs Required For Fisheries Management? (Step 7)
 <!--CH incorporate considerations when preferred-->
 
-LRPs can be used to inform a variety of management decisions (as described in the section, \@ref(roleLRPs)).  Although proportion-based LRPS are sufficient under Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making. For SMUs where harvest is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty (ref)<!--CH add ref-->, though to comply with the WSP, the status of component CUs should also be considered. 
+LRPs can be used to inform a variety of management decisions (as described in the section, \@ref(roleLRPs)).  Although proportion-based LRPS are sufficient under Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making. For SMUs where harvest is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty [@TreatyGovernmentCanada2019], though to comply with the WSP, the status of component CUs should also be considered. 
 
 
 
