--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -6,7 +6,6 @@
 Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal
 obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005a].
 
-
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002a]. Because allee effects are only infrequently observed among marine fish species [@keithPopulationDynamicsMarine2012], and rarely detected for Pacific salmon (but see @cunninghamSizeSelectivityPredation2013), a biological basis for serious harm is often difficult to identify. 
 
 Furthermore, the definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm mentions possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of mechanisms driving declines in productivity (but see @chagarisEcologicalReferencePoints2020).
@@ -15,7 +14,7 @@ Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precaut
 
 Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers. Portfolio effects have been established for numerous salmon stocks, defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying population structure (e.g., structure at the CU level) and associated biodiversity [@pricePortfolioSimplificationArising2021a].
 
-Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
+Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. Benchmarks for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are not always available. See Section \@ref(cu-est-methods).
 
 
 Under the WSP, the assessment of Pacific salmon has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005a], the revised Fisheries Act includes language indicates that a single LRP may be required for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower benchmarks. The present work expands on the previous work by providing guidance on establishing LRPs for management of Pacific salmon SMUs.  Given the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, lower benchmarks can be used as proxies for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate status represented by WSP benchmarks across component CUs to the scale of SMUs. 
@@ -35,7 +34,7 @@ Less frequently, multidimensional approaches that aggregate status over numerous
 For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks in the US (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. 
 
 
-Under Canada's WSP, status assessments generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity, which benchmarks along each metric [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP requires an expert-driven process to integrate sometimes conflicting metrics, and has been implemented for numerous stocks in Canada (e.g., Fraser River Sockeye Salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these assessment is high demand on time and staff resources. Based on the consistencies that emerged from the assessments where this approach has been applied,  (Pestal et al. in prep) have developed an algorithm for combining metrics to derive an overall biological status to approximate the integrated WSP status assessments for Pacific salmon at the scale of CUs. 
+Under Canada's WSP, status assessments generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity, with benchmarks along each metric [@holtEvaluationBenchmarksConservation2009].  One advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of CUs. A second advantage is that a single-metric dropping below the benchmark may not trigger red status over all given high variability in abundances for some CUs. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status overall. <!--CH comment; this is still a problem for logistic regression based LRPs that are impacted by CUs dropping below LBMs in only a single year even if not associated with what local experts would deem serious harm. I have highlighted this as uncertainty for that approach in the last chapter of this WP.--> Expert-driven processes to integrate sometimes conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks in Canada (e.g., Fraser River Sockeye Salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these expert-driven assessments is high demand on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, (Pestal et al. in prep) developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm, known as the Rapid Multidimensional Scanning Tool, was ground-truthed by local assessment experts and tested with stocks not included in the original formulation.
 
 
 In some cases, single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). While biological assessments under the WSP are implemented at the scale of Conservation Unit, CU, fisheries management often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of  individual CUs breaching their lower benchmark on spawner abundances, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
@@ -78,13 +77,15 @@ Pacific salmon are unique among marine fish species because of their anadromous 
 
 ## Scope of Working Paper
 
-A companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. The application of the LRP methods are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
+A companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. Our applications of LRP methods are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
+
+The LRPs considered here focus on serious harm to the stock. We have not included metrics or benchmarks of the status of salmon habitat [@stalbergCanadaPolicyConservation2009] or the ecosystem as a whole, though future analyses could more capture a more thorough perception of the nature of serious harm to salmon that includes those dimensions.  
 
 While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stock provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stock provisions is beyond our scope, and is a gap that warrants further discussion.  We highlight a few possible roles for LRPs below. We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stock provisions.
 
 Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes, a full review and evaluation of impacts of time-varying parameters on LRPs is beyond our scope though is an important area of future research.
 
-While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009a to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm documented in Pestal et al. (in prep), developed from the implementation of formal WSP assessments for Fraser River Sockeye Salmon [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], Interior Fraser Coho Salmon [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]. A full review of that algorithm is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
+While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009a to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm, the Rapid Multidimensional Scanning Tool, documented in Pestal et al. (in prep), developed from the implementation of formal, peer-reviwed WSP assessments for Pacific salmon stocks in Canada. A full review of the Rapid Multidimensional Scanning Tool is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
 
 Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with managers and stakeholders.
  
@@ -114,7 +115,7 @@ In addition, some populations without hatcheries may be influenced by straying f
 LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. Within a harvest control role, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs using biological considerations [@dfoScienceAdvicePrecautionary2021]. 
 
 
-More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probability of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.<!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of a Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers are often difficult to quantify (e.g., hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009) and stocks assessmentment have typically not integrated uncertainties in estimates of spawner abundances with reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty (ref). The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
+More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probability of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.<!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of a Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers are often difficult to quantify (e.g., hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009) and stocks assessmentment have typically not integrated uncertainties in estimates of spawner abundances with reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020a]. The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
 
 
 <!--CH side note:  DFO's Fisheries Sustainability checklist shows LRPs that usually management operational control points, and not biological LRPs per se-->
