--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -14,6 +14,10 @@ The impact of hatcheries on assessment against CUs and LRPs is a key uncertainty
 - 
 - describe uncertainties arising from missing limited CU-level data. 
 
+
+One caveat with logistic regression-based LRPs is that a single-metric dropping below the benchmark may not trigger red status over all in a multidimensional framework given high variability in spawner abundances for some CUs. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status in formal, peer-reviewed WSP assessments [add refs]. 
+
+
 ### Projection-based LRPs
 - these should be considered in development, and not used on their own without further simluation evluation.
 - describe uncertainties arising from missing limited CU-level data. 
@@ -108,6 +112,9 @@ old notes on time-varying parameters
 The definition of serious harm which includes impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009], depends to some extent on the time-frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or traditional knowledge demonstrates that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @@mckechnieArchaeologicalDataProvide2014]. <!--OMIT, unless this pgh moved to intro: The inclusion of traditional ecological knowledge is more commmon in the development of target reference points for fisheries management that identify long-term targets based on biological, social, and economic considerations [@caddyReferencePointsFisheries1995], than in LRPs. -->
 
 While the inclusion of traditional ecological knowledge is more commmon in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], than in LRPs, there may be value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2020 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both indigenous and western science perspectives are valued though the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By understanding serious harm from both indigenous and mainstream scientific perspectives, LRPs may better reflect underlying biological processes understood through both knowledge systems.
+
+Methods for LRPs development could further consideration of serious harm to habitat or ecosystems. In particular, it may be possible to extend the Rapid Multidimensional Scanner Tool to account for ecosystem components of serious harm, as well as divergent levels of data quantity and quality among CUs. Furthermore, the Rapid Multidimensional Scanner Tool could be extended to provide management triggers that occur prior to reaching the LRP, for example that require precautionary management and/or increased monitoring, as in @dowlingGuidelinesDevelopingFormal2015.
+
 
 <!--CH add more in sentence below-->
 Alternative LRPs aligned with the key principles in Section \@ref() may be developed in the future to capture a broader range of data availability, quality, and types, and dimensions of biological status.
